@@ -1,3 +1,7 @@
+20080626
+ - (djm) [Makefile.in moduli.5] Include moduli(5) manpage from OpenBSD.
+   (bz#1372)
+
 20080616
  - (dtucker) OpenBSD CVS Sync
    - dtucker@cvs.openbsd.org 2008/06/16 13:22:53
@@ -4407,4 +4411,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.5021 2008/06/16 13:35:56 dtucker Exp $
+$Id: ChangeLog,v 1.5022 2008/06/26 05:59:32 djm Exp $
